--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -37,19 +37,17 @@ jobs:
       - name: Install daliuge-translator
         run: pip install -e "daliuge-translator/[test]"
 
-      - name: Set COVERAGE_FILE env var
-        run: echo "COVERAGE_FILE=daliuge-translator/.coverage.${{ matrix.subset }}.${{ github.job }}" >> $GITHUB_ENV
-
       - name: Run daliuge-engine tests
         run: |
+          export "COVERAGE_FILE=daliuge-translator/.coverage.${{ matrix.subset }}.${{ github.job }}"
           cd daliuge-translator
           py.test --cov --show-capture=no
 
       - name: Run upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-${{ github.job }}.${{ matrix.subset }}
-          path: daliuge-translator/.coverage.${{ matrix.subset }}.${{ github.job }}
+          name: coverage-${{ github.job }}.${{ matrix.python-version }}
+          path: daliuge-translator/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
   run_engine:
     name: Run daliuge-enginge tests with python ${{matrix.python-version}}
@@ -80,19 +78,17 @@ jobs:
       - name: Install daliuge-engine
         run: pip install -e "daliuge-engine/[test]"
 
-      - name: Set COVERAGE_FILE env var
-        run: echo "COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.subset }}.${{ github.job }}" >> $GITHUB_ENV
-
-      - name: Run daliuge-engine tests
+      - name: Run tests with coverage
         run: |
+          export "COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}" 
           cd daliuge-engine
           py.test --cov --show-capture=no
 
       - name: Run upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-${{ github.job }}.${{ matrix.subset }}
-          path: daliuge-engine/.coverage.${{ matrix.subset }}.${{ github.job }}
+          name: coverage-${{ github.job }}.${{ matrix.python-version }}
+          path: daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
   run_end_to_end:
     name: Run end-to-end tests with python ${{matrix.python-version}}
@@ -127,19 +123,17 @@ jobs:
       - name: Install daliuge-engine
         run: pip install -e "daliuge-engine/[test]"
 
-      - name: Set COVERAGE_FILE env var
-        run: echo "COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.subset }}.${{ github.job }}" >> $GITHUB_ENV
-
       - name: Run daliuge-engine tests
         run: |
+          export "COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}"
           cd daliuge-engine
           py.test test/deploy/test_graph_to_manager.py test/deploy/test_slurm_utils.py test/test_tool.py test/test_named_port_apps.py --cov --show-capture=no
 
       - name: Run upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-${{ github.job }}.${{ matrix.subset }}
-          path: daliuge-engine/.coverage.${{ matrix.subset }}.${{ github.job }}
+          name: coverage-${{ github.job }}.${{ matrix.python-version }}
+          path: daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
   finish:
     needs: [run_translator, run_engine, run_end_to_end]
