--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -8,87 +8,87 @@ on:
     types: [opened, synchronize, reopened]  # Run on PRs from any branch to any target
 
 jobs:
-  run_translator:
-    name: Run daliuge-translator tests with python ${{matrix.python-version}}
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        include:
-          - python-version: "3.9"
-          - python-version: "3.10"
-          - python-version:  "3.11"
-          - python-version:  "3.12"
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        name: Install Python
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install test dependencies
-        run: |
-          pip install -U coveralls pytest pytest-cov
-          pip install -U setuptools pip wheel dask
-
-      - name: Install daliuge-common
-        run: pip install -e daliuge-common/
-
-      - name: Install daliuge-translator
-        run: pip install -e "daliuge-translator/[test]"
-
-      - name: Run daliuge-engine tests
-        run: |
-          export COVERAGE_FILE=daliuge-translator/.coverage.${{ matrix.subset }}.${{ github.job }}
-          cd daliuge-translator
-          py.test --cov --show-capture=no
-
-      - name: Run upload coverage artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-${{ github.job }}.${{ matrix.python-version }}
-          path: daliuge-translator/.coverage.${{ matrix.python-version }}.${{ github.job }}
-
-  run_engine:
-    name: Run daliuge-enginge tests with python ${{matrix.python-version}}
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        include:
-          - python-version: "3.9"
-          - python-version: "3.10"
-          - python-version:  "3.11"
-          - python-version:  "3.12"
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        name: Install Python
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install test dependencies
-        run: |
-          pip install -U coveralls pytest pytest-cov
-          pip install -U setuptools pip wheel dask
-
-      - name: Install daliuge-common
-        run: pip install -e daliuge-common/
-
-      - name: Install daliuge-engine
-        run: pip install -e "daliuge-engine/[test]"
-
-      - name: Run tests with coverage
-        run: |
-          export COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }} 
-          cd daliuge-engine
-          py.test --cov --show-capture=no
-
-      - name: Run upload coverage artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-${{ github.job }}.${{ matrix.python-version }}
-          path: daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
+#  run_translator:
+#    name: Run daliuge-translator tests with python ${{matrix.python-version}}
+#    runs-on: ubuntu-22.04
+#    strategy:
+#      matrix:
+#        include:
+#          - python-version: "3.9"
+#          - python-version: "3.10"
+#          - python-version:  "3.11"
+#          - python-version:  "3.12"
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - uses: actions/setup-python@v5
+#        name: Install Python
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Install test dependencies
+#        run: |
+#          pip install -U coveralls pytest pytest-cov
+#          pip install -U setuptools pip wheel dask
+#
+#      - name: Install daliuge-common
+#        run: pip install -e daliuge-common/
+#
+#      - name: Install daliuge-translator
+#        run: pip install -e "daliuge-translator/[test]"
+#
+#      - name: Run daliuge-engine tests
+#        run: |
+#          export COVERAGE_FILE=daliuge-translator/.coverage.${{ matrix.subset }}.${{ github.job }}
+#          cd daliuge-translator
+#          py.test --cov --show-capture=no
+#
+#      - name: Run upload coverage artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: coverage-${{ github.job }}.${{ matrix.python-version }}
+#          path: daliuge-translator/.coverage.${{ matrix.python-version }}.${{ github.job }}
+#
+#  run_engine:
+#    name: Run daliuge-enginge tests with python ${{matrix.python-version}}
+#    runs-on: ubuntu-22.04
+#    strategy:
+#      matrix:
+#        include:
+#          - python-version: "3.9"
+#          - python-version: "3.10"
+#          - python-version:  "3.11"
+#          - python-version:  "3.12"
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - uses: actions/setup-python@v5
+#        name: Install Python
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Install test dependencies
+#        run: |
+#          pip install -U coveralls pytest pytest-cov
+#          pip install -U setuptools pip wheel dask
+#
+#      - name: Install daliuge-common
+#        run: pip install -e daliuge-common/
+#
+#      - name: Install daliuge-engine
+#        run: pip install -e "daliuge-engine/[test]"
+#
+#      - name: Run tests with coverage
+#        run: |
+#          export COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
+#          cd daliuge-engine
+#          py.test --cov --show-capture=no
+#
+#      - name: Run upload coverage artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: coverage-${{ github.job }}.${{ matrix.python-version }}
+#          path: daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
   run_end_to_end:
     name: Run end-to-end tests with python ${{matrix.python-version}}
@@ -128,7 +128,8 @@ jobs:
           export COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
           cd daliuge-engine
           py.test test/deploy/test_graph_to_manager.py test/deploy/test_slurm_utils.py test/test_tool.py test/test_named_port_apps.py --cov --show-capture=no
-          ls -la .coverage*
+          pwd 
+          ls -la
 
       - name: Run upload coverage artifact
         uses: actions/upload-artifact@v4
