--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -138,7 +138,7 @@ jobs:
           path: daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
   finish:
-    needs: [run_translator, run_engine, run_end_to_end]
+    needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
     runs-on: ubuntu-22.04
     steps:
     - name: Download all coverage artifacts
