--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -125,7 +125,7 @@ jobs:
 
       - name: Run daliuge-engine tests
         run: |
-          export COVERAGE_FILE=daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
+          export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
           cd daliuge-engine
           py.test test/deploy/test_graph_to_manager.py test/deploy/test_slurm_utils.py test/test_tool.py test/test_named_port_apps.py --cov --show-capture=no
           pwd 
