--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -130,6 +130,11 @@ jobs:
           py.test test/deploy/test_graph_to_manager.py test/deploy/test_slurm_utils.py test/test_tool.py test/test_named_port_apps.py --cov --show-capture=no
           pwd 
           ls -la
+          -
+      - name: List coverage file before upload
+        run: |
+          echo "Working dir: $(pwd)"
+          find . -name ".coverage*"
 
       - name: Run upload coverage artifact
         uses: actions/upload-artifact@v4
