--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -140,7 +140,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-${{ github.job }}.${{ matrix.python-version }}
-          path: daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
+          path: ./daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
   finish:
     needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
