LIU-469: Use full path and change to error if not found

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -139,8 +139,9 @@ jobs:
       - name: Run upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
+          if-no-files-found: error
           name: coverage-${{ github.job }}.${{ matrix.python-version }}
-          path: ./daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
+          path: ${{ github.workspace }}/daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
   finish:
     needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
