--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -128,8 +128,7 @@ jobs:
           export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
           cd daliuge-engine
           py.test test/deploy/test_graph_to_manager.py test/deploy/test_slurm_utils.py test/test_tool.py test/test_named_port_apps.py --cov --show-capture=no
-          pwd 
-          ls -la
+          echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
 
       - name: List coverage file before upload
         run: |
@@ -141,7 +140,7 @@ jobs:
         with:
           if-no-files-found: error
           name: coverage-${{ github.job }}.${{ matrix.python-version }}
-          path: ${{ github.workspace }}/daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
+          path: ${{ env.covfiles }}
 
   finish:
     needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
