--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -123,25 +123,16 @@ jobs:
       - name: Install daliuge-engine
         run: pip install -e "daliuge-engine/[test]"
 
-      - name: Run daliuge-engine tests
-        run: |
+#      - name: Run daliuge-engine tests
+      - run: |
           export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
-          cd daliuge-engine
-          py.test test/deploy/test_graph_to_manager.py test/deploy/test_slurm_utils.py test/test_tool.py test/test_named_port_apps.py --cov --show-capture=no
+          py.test daliuge-engine/test/deploy/test_graph_to_manager.py test/deploy/test_slurm_utils.py test/test_tool.py test/test_named_port_apps.py --cov --show-capture=no
           echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
-
-      - name: List coverage file before upload
-        run: |
-          echo "Working dir: $(pwd)"
-          find . -name ".coverage*"
-
-      - name: Run upload coverage artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           if-no-files-found: error
           name: coverage-${{ github.job }}.${{ matrix.python-version }}
           path: ${{ env.covfiles }}
-          working-directory: daliuge-engine
 
   finish:
     needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
