LIU-469: Include hidden files hail-mary pass

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -140,6 +140,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           if-no-files-found: error
+          include-hidden-files: true
           name: coverage-${{ github.job }}.${{ matrix.python-version }}
           path: ${{ env.covfiles }}
 
