--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -137,6 +137,8 @@ jobs:
           export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
           py.test daliuge-engine/test/deploy/test_graph_to_manager.py 
           echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
+          echo $COVERAGE_FILE
+          ls $COVERAGE_FILE
       - uses: actions/upload-artifact@v4
         with:
           if-no-files-found: error
