--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -134,11 +134,11 @@ jobs:
         run: pip install -e "daliuge-engine/[test]"
 
       - run: |
-          export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
+          export COVERAGE_FILE=coverage.${{ matrix.python-version }}.${{ github.job }}
           py.test daliuge-engine/test/deploy/test_graph_to_manager.py 
           echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
           echo $COVERAGE_FILE
-          ls $COVERAGE_FILE
+          ls -la
       - uses: actions/upload-artifact@v4
         with:
           if-no-files-found: error
@@ -160,7 +160,7 @@ jobs:
 
     - name: Combine coverage data
       run: |
-        find . -name ".coverage.*" -exec mv {} . \;
+        find . -name "coverage.*" -exec mv {} . \;
         coverage combine coverage-artifacts
         coverage report
         coverage xml
