LIU-469: copy all files to one directory and combine

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -145,13 +145,17 @@ jobs:
       with:
         path: coverage-artifacts
 
+    - name: Confirm artifacts exist
+      run: find . -name "coverage*"
+
     - name: Install coverage tools
       run: pip install coverage coveralls
 
     - name: Combine coverage data
       run: |
-        find . -name "coverage.*" -exec mv {} . \;
-        coverage combine coverage-artifacts
+        mkdir combined
+        find . -name "coverage.*" -exec cp {} combined \;
+        coverage combine combined
         coverage report
         coverage xml
 
