--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -134,7 +134,7 @@ jobs:
         run: pip install -e "daliuge-engine/[test]"
 
       - run: |
-          export COVERAGE_FILE=coverage.${{ matrix.python-version }}.${{ github.job }}
+          export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
           py.test daliuge-engine/test/deploy/test_graph_to_manager.py --cov
           echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
           echo $COVERAGE_FILE
@@ -156,7 +156,7 @@ jobs:
         path: coverage-artifacts
 
     - name: Confirm artifacts exist
-      run: find . -name "coverage*"
+      run: find . -name ".coverage*"
 
     - name: Install coverage tools
       run: pip install coverage coveralls
@@ -164,7 +164,8 @@ jobs:
     - name: Combine coverage data
       run: |
         mkdir combined
-        find . -name "coverage.*" -exec cp {} combined \;
+        find . -name ".coverage.*" -exec cp {} combined \;
+        ls -l combined/
         coverage combine combined
         coverage report
         coverage xml
