--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -124,44 +124,61 @@ jobs:
         run: pip install -e "daliuge-engine/[test]"
 
       - run: |
-          export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
-          py.test daliuge-engine/test/deploy/test_graph_to_manager.py --cov
-          echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
-          echo $COVERAGE_FILE
+#          export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
+          py.test daliuge-engine/test/deploy/test_graph_to_manager.py --cov --show-capture=no
+#          echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
+#          echo $COVERAGE_FILE
           ls -la
-      - uses: actions/upload-artifact@v4
-        with:
-          if-no-files-found: error
-          include-hidden-files: true
-          name: coverage-${{ github.job }}.${{ matrix.python-version }}
-          path: ${{ env.covfiles }}
+          
+      - name: Update to coveralls
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_FLAG_NAME: ${{ matrix.python-version }}.${{ github.job }}
+          COVERALLS_PARALLEL: true
+        run: coveralls --service=github
+
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          if-no-files-found: error
+#          include-hidden-files: true
+#          name: coverage-${{ github.job }}.${{ matrix.python-version }}
+#          path: ${{ env.covfiles }}
 
   finish:
-    needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
+    needs: [run_end_to_end]
     runs-on: ubuntu-22.04
     steps:
-    - name: Download all coverage artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: coverage-artifacts
-
-    - name: Confirm artifacts exist
-      run: find . -name ".coverage*"
-
-    - name: Install coverage tools
-      run: pip install coverage coveralls
-
-    - name: Combine coverage data
-      run: |
-        mkdir combined
-        find . -name ".coverage.*" -exec cp {} combined \;
-        ls -l combined/
-        coverage combine combined
-        coverage report
-        coverage xml
-
-    - name: Upload to Coveralls
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COVERALLS_PARALLEL: true
-      run: coveralls --service=github
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
+#  finish:
+#    needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
+#    runs-on: ubuntu-22.04
+#    steps:
+#    - name: Download all coverage artifacts
+#      uses: actions/download-artifact@v4
+#      with:
+#        path: coverage-artifacts
+#
+#    - name: Confirm artifacts exist
+#      run: find . -name ".coverage*"
+#
+#    - name: Install coverage tools
+#      run: pip install coverage coveralls
+#
+#    - name: Combine coverage data
+#      run: |
+#        mkdir combined
+#        find . -name ".coverage.*" -exec cp {} combined \;
+#        ls -l combined/
+#        coverage combine combined
+#        coverage report
+#        coverage xml
+#
+#    - name: Upload to Coveralls
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        COVERALLS_PARALLEL: true
+#      run: coveralls --service=github
