LIU-469: Try existing, working approach.

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -106,7 +106,7 @@ jobs:
         run: coveralls --service=github
 
   finish:
-    needs: [run_end_to_end] # [run_translator, run_engine, run_end_to_end]
+    needs: [run_end_to_end]
     runs-on: ubuntu-22.04
     steps:
     - name: Download all coverage artifacts
