--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -133,13 +133,11 @@ jobs:
       - name: Install daliuge-engine
         run: pip install -e "daliuge-engine/[test]"
 
-      - run: |
-#          export COVERAGE_FILE=.coverage.${{ matrix.python-version }}.${{ github.job }}
+      - name: Run tests
+        run: |
           py.test daliuge-engine/test/deploy/test_graph_to_manager.py --cov --show-capture=no
-#          echo "covfiles=$COVERAGE_FILE" >> $GITHUB_ENV
-#          echo $COVERAGE_FILE
           ls -la
-          
+
       - name: Update to coveralls
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
