LIU-454: Update unittest comment

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master  #  Only run on pushes to master
   pull_request:
-    types: [opened, synchronize]  # Run on PRs from any branch to any target
+    types: [opened, synchronize]  # Run on PRs from any branch
 
 jobs:
   run_translator:
