LIU-505: Fix multi-input skipped AppDROP after Branch False condition.
This is technically only a 1 line fix, but I wanted to start having more branch tests.

Signed-off-by: Ryan Bunney <ryanbunney@fastmail.com>

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: Run tests
         run: |
-          py.test daliuge-engine/test/deploy/ daliuge-engine/test/named_ports daliuge-engine/test/test_tool.py --cov --show-capture=no
+          py.test daliuge-engine/test/deploy/ daliuge-engine/test/named_ports daliuge-engine/test/apps/test_branch.py daliuge-engine/test/test_tool.py --cov --show-capture=no
 
       - name: Update to coveralls
         env:
