LIU-508: Improve parsing
Change the Slurm client configuration to use more error-resistant `dict.get` approach.

Signed-off-by: Ryan Bunney <ryanbunney@fastmail.com>

--- a/daliuge-engine/dlg/deploy/configs/setonix.ini
+++ b/daliuge-engine/dlg/deploy/configs/setonix.ini
@@ -1,7 +1,28 @@
 ; This will be replaced by the above definition when processed
 
+[DEPLOYMENT]
+remote=False
+submit=False
 
-[ENVIRONMENT]
+[ENGINE]
+NUM_NODES = 1
+NUM_ISLANDS = 1
+ALL_NICS =
+
+[GRAPH]
+; Local
+LOGICAL_GRAPH = /tmp/HelloWorld-Universe.graph
+PHYSICAL_GRAPH =
+
+; Remote
+GITHUB = True
+; GITLAB = True
+USER_ORG = ICRAR
+REPO = EAGLE-graph-repo
+BRANCH = master
+PATH = examples/HelloWorld-Universe.graph
+
+[FACILITY]
 USER =
 ACCOUNT = pawsey0411
 LOGIN_NODE = setonix.pawsey.org.au
