--- a/daliuge-engine/dlg/deploy/configs/default.ini
+++ b/daliuge-engine/dlg/deploy/configs/default.ini
@@ -11,7 +11,8 @@ ALL_NICS =
 
 [GRAPH]
 ; Local
-LOGICAL_GRAPH = /tmp/HelloWorld-Universe.graph
+; /tmp/HelloWorld-Universe.graph
+LOGICAL_GRAPH =
 PHYSICAL_GRAPH =
 
 ; Remote
@@ -24,9 +25,9 @@ PATH = examples/HelloWorld-Universe.graph
 
 
 [FACILITY]
-USER = 
+USER = rbunney
 ACCOUNT =   
-LOGIN_NODE = 
+LOGIN_NODE = hyades.icrar.org
 HOME_DIR = 
 DLG_ROOT = ${HOME_DIR}/dlg 
 LOG_DIR = ${DLG_ROOT}/log
