--- a/daliuge-engine/dlg/deploy/configs/default.ini
+++ b/daliuge-engine/dlg/deploy/configs/default.ini
@@ -1,7 +1,7 @@
 ; This will be replaced by the above definition when processed
 
 [DEPLOYMENT]
-remote=False
+remote=True
 submit=False
 
 [ENGINE]
@@ -28,9 +28,13 @@ PATH = examples/HelloWorld-Universe.graph
 USER = rbunney
 ACCOUNT =   
 LOGIN_NODE = hyades.icrar.org
-HOME_DIR = 
-DLG_ROOT = ${HOME_DIR}/dlg 
+HOME_DIR = /home/rbunney
+DLG_ROOT = ${HOME_DIR}/dlg
 LOG_DIR = ${DLG_ROOT}/log
-MODULES = 
+MODULES = "module use /group/askap/modulefiles
+module load singularity/4.1.0-mpi
+module load py-mpi4py/3.1.5-py3.11.6
+module load py-numpy/1.26.1"
+
 VENV = ${DLG_ROOT}/venv
 EXEC_PREFIX = "srun -l"
