LIU-508: Make linter fail on Warnings

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Run pylint
         run: |
-          pylint daliuge-common daliuge-translator daliuge-engine --fail-under=9 --fail-on=E                    
+          pylint daliuge-common daliuge-translator daliuge-engine --fail-under=9 --fail-on=W
