LIU-508: Documentation updates for remote-submit
Signed-off-by: Ryan Bunney <ryanbunney@fastmail.com>

--- a/daliuge-engine/dlg/deploy/configs/default.ini
+++ b/daliuge-engine/dlg/deploy/configs/default.ini
@@ -25,16 +25,12 @@ PATH = examples/HelloWorld-Universe.graph
 
 
 [FACILITY]
-USER = rbunney
+USER =
 ACCOUNT =   
 LOGIN_NODE = hyades.icrar.org
 HOME_DIR = /home/rbunney
 DLG_ROOT = ${HOME_DIR}/dlg
 LOG_DIR = ${DLG_ROOT}/log
-MODULES = "module use /group/askap/modulefiles
-module load singularity/4.1.0-mpi
-module load py-mpi4py/3.1.5-py3.11.6
-module load py-numpy/1.26.1"
-
+MODULES =
 VENV = ${DLG_ROOT}/venv
 EXEC_PREFIX = "srun -l"
