--- a/daliuge-engine/dlg/deploy/configs/setonix.ini
+++ b/daliuge-engine/dlg/deploy/configs/setonix.ini
@@ -1,7 +1,7 @@
 ; This will be replaced by the above definition when processed
 
 [DEPLOYMENT]
-remote=False
+remote=True
 submit=False
 
 [ENGINE]
@@ -11,7 +11,8 @@ ALL_NICS =
 
 [GRAPH]
 ; Local
-LOGICAL_GRAPH = /tmp/HelloWorld-Universe.graph
+; /tmp/HelloWorld-Universe.graph
+LOGICAL_GRAPH =
 PHYSICAL_GRAPH =
 
 ; Remote
@@ -22,13 +23,17 @@ REPO = EAGLE-graph-repo
 BRANCH = master
 PATH = examples/HelloWorld-Universe.graph
 
+
 [FACILITY]
-USER =
 ACCOUNT = pawsey0411
+USER =
 LOGIN_NODE = setonix.pawsey.org.au
 HOME_DIR = /scratch/${ACCOUNT}
 DLG_ROOT = ${HOME_DIR}/${USER}/dlg
 LOG_DIR = ${DLG_ROOT}/log
-MODULES = 
-VENV = source /software/projects/${ACCOUNT}/dlg-venv/bin/activate
+MODULES = module use /group/askap/modulefiles
+    module load singularity/4.1.0-mpi
+    module load py-mpi4py/3.1.5-py3.11.6
+    module load py-numpy/1.26.1
+VENV = source /software/projects/${ACCOUNT}/venv/bin/activate
 EXEC_PREFIX = srun -l
