Adjusted parameter to actual call

--- a/OpenAPI/composite_manager.yaml
+++ b/OpenAPI/composite_manager.yaml
@@ -131,7 +131,7 @@ paths:
     parameters:
       - schema:
           type: string
-        name: node
+        name: node_str
         in: path
         required: true
       - schema:
