Use tm instead of lgweb
Updated documentation; enforce correct user when strating containers.

--- a/daliuge-translator/docker/Dockerfile
+++ b/daliuge-translator/docker/Dockerfile
@@ -15,7 +15,7 @@ LABEL stage=builder
 # RUN service avahi-daemon stop && \
 #     service dbus start && \
 #     service avahi-daemon start && \
-#     avahi-set-host-name dlg-trans
+#     avahi-set-host-name dlg-tm
 
 COPY / /daliuge
 
