--- a/daliuge-translator/docker/Dockerfile.ray
+++ b/daliuge-translator/docker/Dockerfile.ray
@@ -11,7 +11,7 @@ RUN sudo apt-get update && sudo apt-get install -y python3-pip gcc && sudo apt-g
 RUN service avahi-daemon stop && \
     service dbus start && \
     service avahi-daemon start && \
-    avahi-set-host-name dlg-trans
+    avahi-set-host-name dlg-tm
 COPY / /daliuge
 
 RUN . ~/dlg/bin/activate && \
