--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -58,6 +58,7 @@ jobs:
           - python-version: "3.10"
           - python-version:  "3.11"
           - python-version:  "3.12"
+          - python-version: "3.13"
 
     steps:
       - uses: actions/checkout@v4
@@ -98,6 +99,7 @@ jobs:
           - python-version: "3.10"
           - python-version:  "3.11"
           - python-version:  "3.12"
+          - python-version: "3.13"
 
     steps:
       - uses: actions/checkout@v4
