--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     container_name: traefik
     hostname: traefik.localhost
     networks:
-      - dlg-demo
+      - dlg-local
     command:
       - "--log.level=DEBUG"
       - "--api=true"
@@ -52,10 +52,9 @@ services:
     container_name: dlg-dim
     command: ["dlg", "dim", "-H", "0.0.0.0", "-N", "dlg-nm1,dlg-nm2"]
     networks:
-      - dlg-demo
-    links:
-      - traefik:dlg-nm1.localhost
-      - traefik:dlg-nm2.localhost
+      dlg-local:
+        aliases:
+          - traefik
     labels:
       - "traefik.http.routers.dim.rule=Host(`dlg-dim.localhost`)"
       - "traefik.http.services.dim.loadbalancer.server.port=8001"
@@ -77,7 +76,9 @@ services:
     user: ${MY_UID}:${MY_GID}
     command: ["dlg", "nm", "-H", "0.0.0.0", "-vv"]
     networks:
-      - dlg-demo
+      dlg-local:
+        aliases:
+          - traefik
     labels:
       - "traefik.http.routers.nm1.rule=Host(`dlg-nm1.localhost`)"
       - "traefik.http.services.nm1.loadbalancer.server.port=8000"
@@ -98,7 +99,9 @@ services:
     user: ${MY_UID}:${MY_GID}
     command: ["dlg", "nm", "-H", "0.0.0.0", "-vv"]
     networks:
-      - dlg-demo
+      dlg-local:
+        aliases:
+          - traefik
     labels:
       - "traefik.http.routers.nm2.rule=Host(`dlg-nm2.localhost`)"
       - "traefik.http.services.nm2.loadbalancer.server.port=8000"
@@ -120,9 +123,9 @@ services:
     user: ${MY_UID}:${MY_GID}
     command: ["dlg", "daemon", "--tm"]
     networks:
-      - dlg-demo
-    links:
-      - traefik:dlg-dim.localhost
+      dlg-local:
+        aliases:
+          - traefik
     labels:
       - "traefik.http.routers.tm.rule=Host(`dlg-tm.localhost`)"
       - "traefik.http.services.tm.loadbalancer.server.port=8084"
@@ -132,5 +135,5 @@ services:
       - /etc/group:/etc/group:ro
 
 networks:
-  dlg-demo:
+  dlg-local:
 
